--- a/dodatki.css
+++ b/dodatki.css
@@ -155,17 +155,31 @@ body {
 
 .Contact {
     position: relative;
-    justify-content:space-around;
-    gap: 2px;
-    display: block;
+    justify-content: center;
+    gap: 1%;
     text-align: center;
+    display: flex;
+    padding: 20px;
+}
+#Email {
+  font-size: 250%;
+  transition: 1s
+  
+}
+#Discord {
+  font-size: 250%;
+  transition: 1s
+}
+#Youtube {
+  font-size: 250%;
+  transition: 1s
+  
 }
 
-
 #Email:hover {
-    color: rgb(245, 169, 102);
     transition: 1s;
-    line-break: anywhere;
+    color: rgb(255, 179, 57);  
+    
 }
 #Discord:hover {
     color:blue;
@@ -173,7 +187,6 @@ body {
 }
 #Youtube:hover {
     color: red;
-    position: relative;
     transition: 1s;
 }
 #czarne_tlo {
